--- a/booker/templates/layout.html
+++ b/booker/templates/layout.html
@@ -28,8 +28,13 @@
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
-              <a class="nav-item nav-link" href="/login">Login (in 🚧)</a>
-              <a class="nav-item nav-link" href="/register">Register (in 🚧)</a>
+              {% if current_user.is_authenticated %}
+                <a class="nav-item nav-link" href="{{ url_for('account') }}">{{ current_user.email }}</a>
+                <a class="nav-item nav-link" href="{{ url_for('logout') }}">Log out</a>
+              {% else %}
+                <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+                <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+              {% endif %}
             </div>
           </div>
         </div>
