--- a/booker/templates/layout.html
+++ b/booker/templates/layout.html
@@ -29,7 +29,7 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if current_user.is_authenticated %}
-                <a class="nav-item nav-link" href="{{ url_for('account') }}">{{ current_user.email }}</a>
+                <a class="nav-item nav-link" href="{{ url_for('account') }}">{{ current_user.username }}</a>
                 <a class="nav-item nav-link" href="{{ url_for('logout') }}">Log out</a>
               {% else %}
                 <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
