--- a/booker/templates/register.html
+++ b/booker/templates/register.html
@@ -6,6 +6,19 @@
       <fieldset class="form-group">
         <legend class="border-bottom mb-4">Create an account</legend>
         <div class="form-group">
+          {{ form.username.label(class="form-control-label") }}
+          {% if form.username.errors %}
+            {{ form.username(class="form-control form-control-lg is-invalid") }}
+            <div class="invalid-feedback">
+              {% for error in form.username.errors %}
+                <span>{{ error }}</span>
+              {% endfor %}
+            </div>
+          {% else %}
+            {{ form.email(class="form-control form-control-lg") }}
+          {% endif %}
+        </div>
+        <div class="form-group">
           {{ form.email.label(class="form-control-label") }}
           {% if form.email.errors %}
             {{ form.email(class="form-control form-control-lg is-invalid") }}
