--- a/booker/templates/register.html
+++ b/booker/templates/register.html
@@ -15,7 +15,7 @@
               {% endfor %}
             </div>
           {% else %}
-            {{ form.email(class="form-control form-control-lg") }}
+            {{ form.username(class="form-control form-control-lg") }}
           {% endif %}
         </div>
         <div class="form-group">
