--- a/booker/templates/layout.html
+++ b/booker/templates/layout.html
@@ -31,6 +31,9 @@
               {% if current_user.is_authenticated %}
                 <a class="nav-item nav-link" href="{{ url_for('account') }}">{{ current_user.username }}</a>
                 <a class="nav-item nav-link" href="{{ url_for('logout') }}">Log out</a>
+                {% if current_user.admin %}
+                  <a class="nav-item nav-link" href="{{ url_for('nuke_db') }}">Recreate DB</a>
+                {% endif %}
               {% else %}
                 <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
                 <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
