--- a/booker/templates/index.html
+++ b/booker/templates/index.html
@@ -6,6 +6,9 @@
       <legend class="border-bottom mb-4">Enter your current address:</legend>
       <div class="form-group">
         {{ form.address }}
+        <div class="form-check">
+          {{ form.auto_book(class="form-check-input") }} {{ form.auto_book.label(class="form-check-label") }}
+        </div>
       </div>
       <div class="form-group">
         {{ form.submit(class="btn btn-outline-info")}}
