--- a/booker/templates/layout.html
+++ b/booker/templates/layout.html
@@ -48,11 +48,12 @@
     </header>
     <main role="main" class="container">
       <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-12">
           {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
               {% for category, message in messages %}
-                <div class="alert alert-{{ category }}">
+              <div class="alert alert-{{ category }}">
+                  <button type="button" class="close" data-dismiss="alert">&times;</button>
                   {{ message }}
                 </div>
               {% endfor %}
