--- a/booker/templates/layout.html
+++ b/booker/templates/layout.html
@@ -25,12 +25,18 @@
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="/">Home</a>
+              {% if current_user.is_authenticated %}
+                <a class="nav-item nav-link" href="{{ url_for('bookings', username=current_user.username) }}">Bookings</a>
+              {% endif %}
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if current_user.is_authenticated %}
                 <a class="nav-item nav-link" href="{{ url_for('account') }}">{{ current_user.username }}</a>
                 <a class="nav-item nav-link" href="{{ url_for('logout') }}">Log out</a>
+                {% if current_user.admin %}
+                  <a class="nav-item nav-link" href="{{ url_for('nuke_db') }}">Recreate DB</a>
+                {% endif %}
               {% else %}
                 <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
                 <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
@@ -42,11 +48,12 @@
     </header>
     <main role="main" class="container">
       <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-12">
           {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
               {% for category, message in messages %}
-                <div class="alert alert-{{ category }}">
+              <div class="alert alert-{{ category }}">
+                  <button type="button" class="close" data-dismiss="alert">&times;</button>
                   {{ message }}
                 </div>
               {% endfor %}
