--- a/booker/templates/index.html
+++ b/booker/templates/index.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
+<div id = "js_alert_placeholder"></div>
   <form action="" method="post">
     {{ form.hidden_tag() }}
     <fieldset class="form-group">
@@ -15,4 +16,23 @@
       </div>
     </fieldset>
   </form>
+  <script>
+    var source = new EventSource("{{ url_for('sse.stream') }}");
+    function showalert(message,alerttype) {
+
+    $('#js_alert_placeholder').append('<div id="alertdiv" class="alert ' +  alerttype + '"><a class="close" data-dismiss="alert">×</a><span>'+message+'</span></div>')
+
+    setTimeout(function() {
+      $("#alertdiv").remove();
+    }, 10000);
+    };
+    source.addEventListener('greeting', function(event) {
+        var data = JSON.parse(event.data);
+        console.log(data.address, data.category);
+        showalert(data.address, data.category);
+    }, false);
+    source.addEventListener('error', function(event) {
+        console.log("Failed to connect to event stream. Is Redis running?");
+    }, false);
+  </script>
 {% endblock content %}
