:bulb: start handling failure

--- a/booker/templates/booking.html
+++ b/booker/templates/booking.html
@@ -11,7 +11,7 @@
     $('#js_alert_placeholder').append('<div id="alertdiv" class="alert alert-' + alerttype + '"><button type="button" class="close" data-dismiss="alert">&times;</button><span><a href=https://www.google.com/maps/search/?api=1&query=' + encodeURIComponent(address.trim()) + '>' + `Found bike (${id}) at ${address}` + '</a></span></div>')
   };
   socket.on('booked', function (data) {
-    showalert(data.address, data.bike_name, 'success')
+    showalert(data.address, data.bike_name, data.status)
   });
 </script>
 {% endblock content %}
