--- a/booker/templates/booking.html
+++ b/booker/templates/booking.html
@@ -4,14 +4,14 @@
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
 <script>
   var socket = io.connect('http://' + document.domain + ':' + location.port);
-  socket.on('connect', function () {
-  socket.emit('my event', {data: 'wub wub'});
-  });
-  function showalert(address, id, alerttype) {
-    $('#js_alert_placeholder').append('<div id="alertdiv" class="alert alert-' + alerttype + '"><button type="button" class="close" data-dismiss="alert">&times;</button><span><a href=https://www.google.com/maps/search/?api=1&query=' + encodeURIComponent(address.trim()) + '>' + `Found bike (${id}) at ${address}` + '</a></span></div>')
+  function showalert(alerttype, address, id) {
+    var banner_content = alerttype === 'success'
+      ? `Found bike #${id} at ${address} - <a href=https://www.google.com/maps/search/?api=1&query=${encodeURIComponent(address.trim())}>View directions</a>`
+      : 'No bike found :(';
+    $('#js_alert_placeholder').append(`<div id="alertdiv" class="alert alert-${alerttype}"><button type="button" class="close" data-dismiss="alert">&times;</button><span>${banner_content}</span></div>`)
   };
   socket.on('booked', function (data) {
-    showalert(data.address, data.bike_name, data.status)
+    showalert(data.status, data.address, data.bike_name)
   });
 </script>
 {% endblock content %}
