--- a/booker/templates/bookings.html
+++ b/booker/templates/bookings.html
@@ -11,10 +11,10 @@
     </thead>
     <tbody>
       {% for booking in bookings.items %}
-      <tr class="table-{{ 'success' if booking.status == 'completed' else
+      <tr class="table-{{ 'success' if booking.status == 'booked' else
       'secondary' if booking.status == 'cancelled' else
       'danger' if booking.status == 'error' else
-      'warning' if booking.status == 'timeout' else
+      'warning' if booking.status == 'not found' else
       'info' if booking.status == 'match found' else
       'default'}}" onclick="window.location.href='{{ url_for('booking_id',id=booking.id) }}'"
       style="cursor:pointer;">
