Real time notifications (#4)
* :package: SSE

* :package: redis

* :construction: js handling of published events

* :construction: google legit API key and SSE

* :construction: not really but why not

* :construction: SSE and redirections

* :construction: sse / gunicorn

* :bulb: with socketio

* :tada: EUREKA

* :wrench: socket

* :bulb: eventlet.spawn

* :wrench: more interesting wording for test

* :snake: E402 compliant

* :recycle: clean code

* :bulb: with google maps url

* :scissors: removed test

* :bulb: start handling failure

* :speaker: less logs

* :wrench: emit arguments

* :wrench: better code

* :wrench: better urls

* :wrench: add everything to update db

* :ledger: naming things

* :speaker: removed useless logs

* :bulb: with namespaces to prevent conflicting notifications

* :ledger:

--- a/booker/templates/bookings.html
+++ b/booker/templates/bookings.html
@@ -11,12 +11,13 @@
     </thead>
     <tbody>
       {% for booking in bookings.items %}
-      <tr class="table-{{ 'success' if booking.status == 'completed' else
+      <tr class="table-{{ 'success' if booking.status == 'booked' else
       'secondary' if booking.status == 'cancelled' else
       'danger' if booking.status == 'error' else
-      'warning' if booking.status == 'timeout' else
+      'warning' if booking.status == 'not found' else
       'info' if booking.status == 'match found' else
-      'default'}}">
+      'default'}}" onclick="window.location.href='{{ url_for('booking_id',id=booking.id) }}'"
+      style="cursor:pointer;">
         <th scope="row">{{ booking.created_at | datetimefilter }}</th>
         <td>{{ booking.human_readable_address }}</td>
         <td>{{ booking.matched_bike_address if booking.matched_bike_address else '' }}</td>
