--- a/booker/templates/booking.html
+++ b/booker/templates/booking.html
@@ -4,9 +4,9 @@
 <div>
   🚧 Soon: cancel rental and more
 </div>
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
 <script>
-  var socket = io.connect(`https://${document.domain}:${location.port}/booking_{{ booking.id }}`);
+  var socket = io.connect(`https://${document.domain}:${location.port}/booking_{{ booking.id }}`, {secure: true, reconnect: true, rejectUnauthorized : false});
   function showalert(alerttype, address, id) {
     var banner_content = alerttype === 'success'
       ? `Found bike #${id} at ${address} - <a href="https://www.google.com/maps/search/?api=1&query=${encodeURIComponent(address.trim())}">View directions</a>`
